# MLOPS_group97

./: Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  config.yaml  data.dvc  inference.dockerfile  inference_requirements.txt  pistachio_inference.py  pyproject.toml  requirements.txt  setup.py  training.dockerfile
.dvc/: config
.github/workflows/: tests.yml
app/: pistachio_inference.py
data/processed/: print.py
docs/: conf.py  index.rst
mlops_group97/: Makefile  README.md  setup.py
mlops_group97/docs/: Makefile  make.bat
models/: model.py
outputs/2024-01-11/11-11-26/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-11/11-12-16/.hydra/: hydra.yaml
outputs/2024-01-11/11-13-46/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-11/11-14-53/.hydra/: config.yaml  hydra.yaml
pistachio/: app.py
pistachio/models/: model.py
pistachio/src/data/: make_dataset.py  make_lightning_dataset.py
pistachio/src/models/: lightning_predict.py  lightning_train.py  predict_model.py  train_model.py
pistachio/src/models/conf/: config.yaml
pistachio/src/monitoring/: monitor.py
pistachio/src/visualization/: visualize.py
reports/: README.md  monitoring.html  result_dict.json
src/data/: make_dataset.py
src/models/: predict_model.py  train_model.py
tests/: __init__.py  test_data.py  test_model.py  test_model2.py  test_training.py
wandb/run-20240115_144328-7sd62sap/files/: requirements.txt
wandb/run-20240115_162116-nbh9wgeh/files/: requirements.txt
wandb/run-20240117_111618-36kof3ol/files/: requirements.txt
(+3 files in other folders)
