[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pistachio"
version = "0.1.0"
authors = [{name = "EM", email = "me@em.com"}]
description = "Something cool here."
requires-python = ">=3.8"
dynamic = ["dependencies"]
license = {file = "LICENSE"}


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
select = ["I", "C", "E", "W"]
line-length=120